# music2sheet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  feature_extract.py  musicnet.py  prepare.sh  pyproject.toml  setup.py  sheetsage.sh  skills.md  test_tree.pckl  train.py
.github/workflows/: lint.yml  test.yml
.orchestrator/: .gitignore  dependency_graph.yaml
.orchestrator/hooks/: agent_watchdog.py  launch_agents.sh  tmux_session.sh
.orchestrator/tickets/: agent-C-pr-4a-melody-decoder.done.json  agent-C-pr-4a-melody-decoder.json  agent-C-pr-4b-data-pipeline.json  pr-1-register-slow-marker.json  pr-b3-add-yt-dlp-dep.json
api/: main.py  openapi.json  storage.py  workers.py  ytdlp.py
api/fixtures/: sample.musicxml
api/schemas/: __init__.py  jobs.py  transcribe.py
api/scripts/: dump_openapi.py
cloudrun/: Dockerfile  ignore
deploy/: Dockerfile  README.md
docker/: Dockerfile  Dockerfile-release  requirements.txt
evals/: LEADERBOARD.md  README.md
ml/: README.md  audio_io.py  types.py
ml/datasets/: base.py  billboard.py  hooktheory.py  isophonics.py  pop909.py  rwc_pop.py
ml/inference/: __init__.py  pipeline.py
ml/models/: beat_transformer.py  chord_head.py  chord_tokenizer.py  demucs.py  melody_decoder.py  melody_tokenizer.py  mert.py  registry.yaml
ml/scoring/: lilypond.py  midi.py  musicxml.py
ml/training/: README.md  chord_data.py  cli.py  collate.py  datasets.py  melody_pipeline.py  trainer.py
sheetsage/: __init__.py  align.py  align_test.py  assets.py  beat_track.py  beat_track_test.py  data.py  data_test.py  eval.py  eval_test.py  infer.py  infer_test.py  utils.py  utils_test.py
sheetsage/assets/: hooktheory.json  jukebox.json  rwc.json  sheetsage.json  test.json
sheetsage/modules/: modules.py  modules_test.py
sheetsage/representations/: __init__.py  base.py  handcrafted.py  handcrafted_test.py  (+2 more)
tests/: conftest.py  test_api.py  test_beat_wrapper.py  test_chord_data.py  test_chord_head.py  test_demucs_wrapper.py  test_melody_decoder.py  test_melody_pipeline.py  test_melody_trainer.py  test_mert_wrapper.py  test_smoke.py
web/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+40 files in other folders)
