[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sheet-sage-2"
version = "0.0.1"
description = "Audio-to-lead-sheet ML system: mp3/wav/URL -> two-stave score with voicings."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "Sheet Sage 2 Contributors" }]
keywords = ["music", "transcription", "lead-sheet", "mir", "musicxml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = []

[project.optional-dependencies]
ml = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "transformers>=4.40",
    "librosa>=0.10",
    "demucs>=4.0",
    "mir_eval>=0.7",
    "numpy>=1.26",
    "scipy>=1.11",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "redis>=5.0",
    "rq>=1.16",
    "pydantic>=2.6",
    "httpx>=0.27",
]
dev = [
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/sheet-sage-2/sheet-sage-2"
Issues = "https://github.com/sheet-sage-2/sheet-sage-2/issues"

[tool.hatch.build.targets.wheel]
# Source packages (ml/, api/) will be added by Agents C and B in later PRs.
# Until then, build only the metadata so `pip install -e .` works in CI.
bypass-selection = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
